app/k8s/3_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-todo-svc
  namespace: todo-app
spec:
  rules:
  - host: todo.cka.melvincv.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-service
            port:
              number: 80
  ingressClassName: nginx
